src/templating/snapshots/yolk__templating__parser__test__error_multiline_with_else.snap
---
source: src/templating/parser.rs
expression: "render_error(parse_document(\"{%f%}\\n{%else%}\\n{%end%}\").unwrap_err())"
snapshot_kind: text
---
  × Failed to parse yolk template file

Error: 
  × Expected block to end here
   ╭─[file:1:1]
 1 │ {%f%}
   · ───┬──
   ·    ╰── block end
 2 │ {%else%}
 3 │ {%end%}
   ╰────
  help: Did you forget an `{% end %}` tag?
